--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
         <div class="row center">
           <div class="card">
             <a href="product.html">
-              <img class="medium" src="./images/p1.jpg" alt="pic" />
+              <img class="medium" src="./images/DiorSauvage.jpg" alt="pic" />
             </a>
             <div class="card-body">
               <a href="product.html">
@@ -44,6 +44,191 @@
                 </span>
                 <span>
                   <i class="fa fa-star"></i>
+                </span>
+              </div>
+              <div class="price">$1.20</div>
+            </div>
+          </div>
+
+          <div class="card">
+            <a href="product.html">
+              <img class="medium" src="./images/DiorSauvage.jpg" alt="pic" />
+            </a>
+            <div class="card-body">
+              <a href="product.html">
+                <h2>Adidas Slim Shirts</h2>
+              </a>
+              <div class="rating">
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+              </div>
+              <div class="price">$1.20</div>
+            </div>
+          </div>
+
+          <div class="card">
+            <a href="product.html">
+              <img class="medium" src="./images/DiorSauvage.jpg" alt="pic" />
+            </a>
+            <div class="card-body">
+              <a href="product.html">
+                <h2>Adidas Slim Shirts</h2>
+              </a>
+              <div class="rating">
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+              </div>
+              <div class="price">$1.20</div>
+            </div>
+          </div>
+
+          <div class="card">
+            <a href="product.html">
+              <img class="medium" src="./images/DiorSauvage.jpg" alt="pic" />
+            </a>
+            <div class="card-body">
+              <a href="product.html">
+                <h2>Adidas Slim Shirts</h2>
+              </a>
+              <div class="rating">
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+              </div>
+              <div class="price">$1.20</div>
+            </div>
+          </div>
+
+          <div class="card">
+            <a href="product.html">
+              <img class="medium" src="./images/DiorSauvage.jpg" alt="pic" />
+            </a>
+            <div class="card-body">
+              <a href="product.html">
+                <h2>Adidas Slim Shirts</h2>
+              </a>
+              <div class="rating">
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+              </div>
+              <div class="price">$1.20</div>
+            </div>
+          </div>
+          <div class="card">
+            <a href="product.html">
+              <img class="medium" src="./images/DiorSauvage.jpg" alt="pic" />
+            </a>
+            <div class="card-body">
+              <a href="product.html">
+                <h2>Adidas Slim Shirts</h2>
+              </a>
+              <div class="rating">
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+              </div>
+              <div class="price">$1.20</div>
+            </div>
+          </div>
+          <div class="card">
+            <a href="product.html">
+              <img class="medium" src="./images/DiorSauvage.jpg" alt="pic" />
+            </a>
+            <div class="card-body">
+              <a href="product.html">
+                <h2>Adidas Slim Shirts</h2>
+              </a>
+              <div class="rating">
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+                <span>
+                  <i class="fa fa-star-o"></i>
+                </span>
+              </div>
+              <div class="price">$1.20</div>
+            </div>
+          </div>
+          <div class="card">
+            <a href="product.html">
+              <img class="medium" src="./images/DiorSauvage.jpg" alt="pic" />
+            </a>
+            <div class="card-body">
+              <a href="product.html">
+                <h2>Adidas Slim Shirts</h2>
+              </a>
+              <div class="rating">
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+                <span>
+                  <i class="fa fa-star"></i>
+                </span>
+                <span>
+                  <i class="fa fa-star-half-o"></i>
                 </span>
               </div>
               <div class="price">$1.20</div>
