--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -60,6 +60,40 @@ a:hover {
   color: #ff8000;
 }
 
+ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+li {
+  margin-top: 1rem;
+}
+
+button {
+  padding: 1.2rem;
+  border-radius: 0.5rem;
+  border: 0.1rem #a4a4a4 solid;
+  font-size: 1.6rem;
+  font-family: Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #f8f8f8;
+  cursor: pointer;
+}
+
+button.primary {
+  background-color: #f0c040;
+}
+
+button.block {
+  width: 100%;
+}
+
+button:hover {
+  border: 0.1rem #404040 solid;
+}
+
 header a {
   color: white;
   padding: 1rem;
@@ -82,6 +116,18 @@ a.brand {
   justify-content: center;
 }
 
+.row.top {
+  align-items: flex-start;
+}
+
+.col-1 {
+  flex: 1 1 25rem;
+}
+
+.col-2 {
+  flex: 2 1 50rem;
+}
+
 img {
   border-radius: 0.5rem;
   height: 20rem;
@@ -89,6 +135,10 @@ img {
 
 img.medium {
   max-width: 29rem;
+  width: 100%;
+}
+
+img.large {
   width: 100%;
 }
 
@@ -119,4 +169,12 @@ img.medium {
 
 .rating span:last-child {
   color: black;
+}
+
+.success {
+  color: greenyellow;
+}
+
+.error {
+  color: red;
 }
