--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -178,3 +178,19 @@ img.large {
 .error {
   color: red;
 }
+
+.alert {
+  padding: 1rem;
+  border: 0.1rem solid transparent;
+  border-radius: 0.5rem;
+}
+
+.alert-info {
+  color: rgb(134, 134, 148);
+  background-color: #e0e0ff;
+}
+
+.alert-error {
+  color: red;
+  background-color: #ffe0e0e0;
+}
